require Java 17 rather than Java 8 just because